# shutter-analyzer

./: .gitignore  IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  INDEX.md  REQUIREMENTS.md  architecture.md  frames.py  frames_smart.py  instructions.md  pyproject.toml  test_basic_functionality.py
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/shutteranalyzer/: MainActivity.kt  ShutterAnalyzerApp.kt
android/app/src/main/java/com/shutteranalyzer/analysis/: BrightnessAnalyzer.kt  EventDetector.kt  ShutterSpeedCalculator.kt  ThresholdCalculator.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/docs/: APP_SPEC.md  BUILD.md  CAMERA_FOCUS_ZOOM_IMPLEMENTATION.md  CLI_QUICKSTART.md  EXPAND_FRAMES_FEATURE.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_LOG_2.md  IMPLEMENTATION_PLAN.md  INDEX.md  TECH_STACK.md  THEORY.md  VIDEO_DECODER_DESIGN.md  VIDEO_LIFECYCLE_MANAGEMENT.md  WIREFRAMES.md
docs/: ANDROID_APP_SPEC.md  ANDROID_TECH_STACK.md  ANDROID_WIREFRAMES.md  HOW_TO.md  THEORY.md
docs/research/google-play-publishing/: background.md  data-safety-declaration.md  privacy-policy.md  registration-checklist.md  report.md  store-listing.md
docs/research/research-android-shutter-apps/: background.md  report.md
shutter_analyzer/: __init__.py  __main__.py  frame_analyzer.py  main.py  output.py  shutter_calculator.py  verify.py  video_processor.py
(+70 files in other folders)
