[project]
name = "shutter-analyzer"
version = "0.1.0"
description = "Measure camera shutter speeds from video recordings"
readme = "INDEX.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
shutter-analyzer = "shutter_analyzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
